--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         },
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "app/Libraries"
         ]
     },
     "autoload-dev": {
