Add helpers star_rating, add_fovorite_form, delete_favorite_form,

--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,9 @@
             "database/seeds",
             "database/factories",
             "app/Libraries"
+        ],
+        "files": [
+            "app/helpers.php" 
         ]
     },
     "autoload-dev": {
